update html version

--- a/src/main/html/resume.html
+++ b/src/main/html/resume.html
@@ -1,295 +1,184 @@
-<title>Paul  O'Connell's Resume</title>
-<style type="text/css">
-.hresume
-{
-    widt 100%;
-    padding: 10px;
-}
-
-.hresume abbr
-{
-    border: none;
-}
-
-.hresume address
-{
-    font-style: normal;
-}
-
-.hresume hr
-{
-    display: block;
-}
-
-.hresume .contact .fn
-{
-    font-weight: bold;
-    font-size: 12pt;
-}
-
-.hresume h2
-{
-    font-size: 12pt;
-    padding: 0 0 5px 0;
-    margin: 0;
-}
-
-.hresume .education, .hresume .accreditation
-{
-    margin: 10px 0 10px 20px;
-    padding: 1px;
-}
-
-.hresume .experience
-{
-    margin: 10px 0 30px 20px;
-    padding: 1px;
-}
-
-.hresume .summary, .hresume .tags
-{
-    margin: 10px 0 20px 20px;
-    padding: 1px;
-}
-
-.hresume .education .htitle, .hresume .experience .htitle
-{
-    float: left;
-}
-
-.hresume .htitle .include
-{
-    display: none;
-}
-
-.hresume .education .date_duration, .hresume .experience .date_duration
-{
-    float: right;
-    font-size: smaller;
-}
-
-.hresume .education .summary
-{
-    margin: 0;
-}
-
-.hresume .tags ul
-{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.hresume .tags ul li
-{
-    display: inline;
-}
-</style>
-
-
-<br />
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns:h="http://ns.hr-xml.org/2007-04-15">
+<head>
+<title>Paul  O'Connell's Curriculum Vitae
+</title>
+</head>
+<body>
 <div class="hresume">
+<h1 id="cv">Curriculum Vitae</h1>
 <div class="contact vcard">
 <div class="fn n" id="j">
 <span class="given-name">Paul</span>
-<span class="middle-name">
+<span class="middle-name"/>
 <span class="family-name">O'Connell</span>
-</span></div>
+</div>
 <div class="adr">
-<span class="street-address">
-<br />
-<span class="locality">, <span class="region">
-<span class="postal-code">
-<span class="country-name">
-</span></span></span></span></span></div>
+<span class="street-address">2B Milltown Drive</span>
+<br/>
+<span class="locality">Churchtown</span>, <span class="region">Dublin 14</span>
+<span class="postal-code"/>
+<span class="country-name">Ireland</span>
+</div>
 <div style="float: left; padding-right: 15px;">
 <span class="tel">
-<span class="value">+353 86 3701860</span> (<span class="type">cell</span>)</span>
+<span class="value">+353 86 3701806</span> (<span class="type"/>)</span>
+<br/>
 </div>
 <div style="float: left;">
-Email: <a class="email" href="mailto:paul.t.oconnell@gmail.com">paul.t.oconnell@gmail.com</a>
-<br />
-Web: <a class="url" href="http://draft.blogger.com/blogger.g?blogID=6147438495842600719">
-<br />
-</a><a class="url" href="http://draft.blogger.com/blogger.g?blogID=6147438495842600719">
-</a></div>
-<a class="url" href="http://draft.blogger.com/blogger.g?blogID=6147438495842600719">
-</a><br />
-<div style="clear: both;">
+		Email: <a class="external email fn" href="mailto:paul.t.oconnell@gmail.com">paul.t.oconnell@gmail.com</a>
+<br/>
 </div>
-<a class="url" href="http://draft.blogger.com/blogger.g?blogID=6147438495842600719">
-</a></div>
-<a class="url" href="http://draft.blogger.com/blogger.g?blogID=6147438495842600719">
-</a><br />
-<hr />
-<a class="url" href="http://draft.blogger.com/blogger.g?blogID=6147438495842600719">
+<div style="clear: both;">&nbsp;</div>
+</div>
+<hr/>
 <div>
-<h2>
-Professional Experience</h2>
+<h2>Skills</h2>
+<div>
+<div class="tags">
+<ul>
+<li>Java : Spring, ORM, J2EE/EJB, JMS, Concurrency. General interest in new open source technologies, test driven design and agile / continuous integration processes. Sun Certified Java Developer</li>
+<li>CI Tools : ANT Expert. Bamboo. Sonar. Clover. Eclemma. PMD</li>
+<li>Dist : Expert knowledge of XML messaging for modeling various business process flows. RMI, CORBA, SOAP, Web Services. Web</li>
+<li>Web : Expert knowledge of Wicket, Servlets, JSP, Struts, Spring MVC, JSF. HTML, Javascript, AJAX, CSS and DOM. Detailed knowledge of Tomcat and Apache servers. Jetty. PHP. Zend Framework. YAML.</li>
+<li>XML : Extensive use of DOM and SAX parsers,XSL,FOP,JAXB.D</li>
+<li>SCM : SCM Tools Expert knowledge of SCM systems (SVN/Git/ClearCase). Eclipse, Intellij, Netbeans.</li>
+<li>J2EE Servers : Websphere, Weblogic, JBoss, Glassfish, Geronimo</li>
+<li>Databases : Oracle, Db2, MySQL, H2.</li>
+<li>Testing : Junit, TestNG, DBUnit, Selenium</li>
+<li>Build Tools : ANT Expert. Bamboo. Sonar. Clover. Eclemma. PMD</li>
+</ul>
+</div>
+</div>
+</div>
+<hr/>
+<div>
+<h2>Professional Experience</h2>
 <div class="vcalendar">
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="title">Contract Software Engineers</span>
-<br />
-<span class="org">Touchpoint</span>, <span class="location">Blackrock, Dublin</span>
+<span class="org">Arantech</span>, <span class="location">Blackrock, Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2001-01</abbr> - <abbr class="dtend">
-</abbr></div>
-<div style="clear: both;">
+<abbr class="dtstart" title="2001-01-01">2010-01</abbr> - <abbr class="dtend">Present</abbr>
 </div>
-<div class="description">
-* Scrum master and developer on the core product with responsibllity for the implementation of new features and bug fixes. Introduction of unit test code coverage metrics and a framework for featuring testing interfaces of the product.
-	</div>
+<span class="title">Java Software Engineer</span>
+<div class="description">Developer on the core product with responsibility for the implementation of new features and bug fixes. Introduction of unit test code coverage metrics and a framework for featuring testing interfaces of the product.</div>
 </div>
+<div style="clear: both">&nbsp;</div>
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="title">Contract Software Engineers</span>
-<br />
-<span class="org">Touchpoint</span>, <span class="location">Dublin, Dublin</span>
+<span class="org">Aegon</span>, <span class="location">IFSC, Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2001-01</abbr> - <abbr class="dtend">
-</abbr></div>
-<div style="clear: both;">
+<abbr class="dtstart" title="2001-01-01">2008-10</abbr> - <abbr class="dtend">2009-10</abbr>
 </div>
-<div class="description">
-Java contractor within the Aegon office providing service for the UK and Dutch Aegon companies.</div>
+<span class="title">Contract Software Engineer</span>
+<div class="description">Validation Service Replatforming Conversion of a legacy client side validation component onto a JBoss J2EE platform to allow support for EJB and Webservice requests. Hibernate, Spring with Wicket UI.</div>
 </div>
+<div style="clear: both">&nbsp;</div>
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="title">Contract Software Engineers</span>
-<br />
-<span class="org">Risk Reporting</span>, <span class="location">Dublin, Dublin</span>
+<span class="org">Terranua/Fidelity</span>, <span class="location">Hatch Street, Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2008-03</abbr> - <abbr class="dtend">2009-10</abbr>
+<abbr class="dtstart" title="2001-01-01">2008-03</abbr> - <abbr class="dtend">2009-09</abbr>
 </div>
-<div style="clear: both;">
+<span class="title">Contract Software Engineer</span>
+<div class="description">Risk Reporting Responsible for a risk reporting system which queries risk details from the DB, creating a xml report which is then transformed via XSL to html and word formats for user preview and printing.</div>
 </div>
-<div class="description">
-Java contractor within terranua’s consultancy group focused on providing a risk control system to the Fidelity organization. Full front to back development work, using Spring (MVC) and Hibernate technologies to deploy within Tomcat/Websphere with an Oracle DB.</div>
-</div>
+<div style="clear: both">&nbsp;</div>
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="title">Contract Software Engineers</span>
-<br />
-<span class="org">Watch List Management</span>, <span class="location">Dublin, Dublin</span>
+<span class="org">Norkom</span>, <span class="location">Henry St, Dublin</span>
 </div>
 <div class="date_duration">
 <abbr class="dtstart" title="2001-01-01">2007-10</abbr> - <abbr class="dtend">2008-02</abbr>
 </div>
-<div style="clear: both;">
+<span class="title">Contract Software Engineer</span>
+<div class="description">Watch List Management Day to day work involves bug fixing and small pieces of new development on various branches of this sub-project.</div>
 </div>
-<div class="description">
-Java contractor within Norkom’s development group, using the Spring, Struts and Hibernate technologies to create a financial crime and compliance application that can be deployed into various J2EE server and database environments.
-					</div>
-</div>
+<div style="clear: both">&nbsp;</div>
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="title">Contract Software Engineers</span>
-<br />
-<span class="org">Unemployment Insurance</span>, <span class="location">Dublin, Dublin</span>
+<span class="org">Curam</span>, <span class="location">Park West, Dublin</span>
 </div>
 <div class="date_duration">
 <abbr class="dtstart" title="2001-01-01">2006-09</abbr> - <abbr class="dtend">2007-09</abbr>
 </div>
-<div style="clear: both;">
-</div>
-<div class="description">
-Curam provide a social enterprise management solution that can be customised for various social welfare organisations across the globe.
-					</div>
-</div>
-<div class="experience vevent vcard">
-<div class="htitle">
-<span class="title">Contract Software Engineers</span>
-<br />
-<span class="org">Unemployment Insurance</span>, <span class="location">Zurich, Switzerland</span>
-</div>
-<div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2003-10</abbr> - <abbr class="dtend">2006-05</abbr>
-</div>
-<div style="clear: both;">
-</div>
-<div class="description">
-Curam provide a social enterprise management solution that can be customised for various social welfare organisations across the globe.
-					</div>
-</div>
-<div class="experience vevent vcard">
-<div class="htitle">
-<span class="title">Contract Software Engineers</span>
-<br />
-<span class="org">Unemployment Insurance</span>, <span class="location">London, England</span>
-</div>
-<div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2003-01</abbr> - <abbr class="dtend">2003-09</abbr>
-</div>
-<div style="clear: both;">
-</div>
-<div class="description">
-Curam provide a social enterprise management solution that can be customised for various social welfare organisations across the globe.
-					</div>
-</div>
-<div class="experience vevent vcard">
-<div class="htitle">
 <span class="title">Software Engineer</span>
-<br />
-<span class="org">RANOS</span>, <span class="location">Dublin, Ireland</span>
+<div class="description">Unemployment Insurance Java developer within the workflow group, which involved the full software development lifecycle on various J2EE platforms. Implementation of a unit testing framework and tools to auto-generate unit test stubs from the project model. Maintenance of the smoke test and continuous integration systems. Curam use a model driven development process and have a custom ORM style solution for database transparency</div>
+</div>
+<div style="clear: both">&nbsp;</div>
+<div class="experience vevent vcard">
+<div class="htitle">
+<span class="org">UBS</span>, <span class="location">Europastrasse 2, Zurich</span>
+</div>
+<div class="date_duration">
+<abbr class="dtstart" title="2001-01-01">2003-11</abbr> - <abbr class="dtend">2006-05</abbr>
+</div>
+<span class="title">Software Engineer</span>
+<div class="description">
+					ZFM is a real time settlement and reconciliation system based on XML messaging over MQ. As project leader my responsibilities have included the design and implementation of an API, the planning and co-ordination of development and testing, both within our group and with other departments. The system consists of various java applications communicating via XML and MQ. A web-based tool supports tracking and supervision of messages within the system.
+eBus provides a consolidated view of all deal confirmation messages within the FX trading platform. As project lead I was responsible for the design of a common message specification, implementation with XML/XSL over MQ, and the co-ordination of the testing and release phases.
+Swix is a system for managing open trade positions within the FX branch of the bank. Lead Java developer my responsibilities included the initial XML protocol specification, implementation of a web application (Tomcat) and co-ordination of testing with other groups and business users.
+</div>
+</div>
+<div style="clear: both">&nbsp;</div>
+<div class="experience vevent vcard">
+<div class="htitle">
+<span class="org">UBS</span>, <span class="location">Liverpool St, London</span>
+</div>
+<div class="date_duration">
+<abbr class="dtstart" title="2001-01-01">2003-01</abbr> - <abbr class="dtend">2003-10</abbr>
+</div>
+<span class="title">Software Engineer</span>
+<div class="description">
+Swix is a system for managing open trade positions within the FX branch of the bank. Lead Java developer my responsibilities included the initial XML protocol specification, implementation of a web application (Tomcat) and co-ordination of testing with other groups and business users.
+</div>
+</div>
+<div style="clear: both">&nbsp;</div>
+<div class="experience vevent vcard">
+<div class="htitle">
+<span class="org">Erisson</span>, <span class="location">Clonskeagh, Dublin</span>
 </div>
 <div class="date_duration">
 <abbr class="dtstart" title="2001-01-01">2000-10</abbr> - <abbr class="dtend">2002-12</abbr>
 </div>
-<div style="clear: both;">
+<span class="title">Software Engineer</span>
+<div class="description">RANOS is an operations and management system for Ericsson’s 3G telecommunications radio network system. Member of a framework group, which provided generic server side Java/CORBA components</div>
 </div>
-<div class="description">
-RANOS is an operations and management system for Ericsson’s 3G telecommunications radio network system.</div>
+<div style="clear: both">&nbsp;</div>
 </div>
 </div>
-</div>
-<hr />
-
+<hr/>
 <div>
-<h2>
-Education &amp; Affiliations</h2>
+<h2>Education</h2>
 <div class="vcalendar">
 <div class="education vevent vcard">
 <div class="htitle">
 <span class="summary">M.Sc Network and Distributed Systems</span>
-<br />
+<br/>
 <span class="org">Trinity College Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtend" title="200009">200009</abbr>
+<abbr class="dtend" title=""/>
 </div>
-<div style="clear: both;">
-</div>
+<div style="clear: both">&nbsp;</div>
 </div>
 <div class="education vevent vcard">
 <div class="htitle">
-<span class="summary">B.A.Engineering</span>
-<br />
+<span class="summary">B.A.I in Computer and Electronic Engineering, B.A in Engineering Mathematics</span>
+<br/>
 <span class="org">Trinity College Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtend" title="199905">199905</abbr>
+<abbr class="dtend" title=""/>
 </div>
-<div style="clear: both;">
-</div>
-</div>
-<div class="education vevent vcard">
-<div class="htitle">
-<span class="summary">
-<br />
-<span class="org">CBS Naas</span>
-</span></div>
-<div class="date_duration">
-<abbr class="dtend" title="">
-</abbr></div>
-<div style="clear: both;">
+<div style="clear: both">&nbsp;</div>
 </div>
 </div>
 </div>
 </div>
-</a></div>
-<a class="url" href="http://draft.blogger.com/blogger.g?blogID=6147438495842600719">
-</a>
+</body>
+</html>
