Add skill class and url link.

--- a/src/main/html/resume.html
+++ b/src/main/html/resume.html
@@ -37,16 +37,26 @@
 <div>
 <div class="tags">
 <ul>
-<li>Java : Spring, ORM, J2EE/EJB, JMS, Concurrency. General interest in new open source technologies, test driven design and agile / continuous integration processes. Sun Certified Java Developer</li>
-<li>CI Tools : ANT Expert. Bamboo. Sonar. Clover. Eclemma. PMD</li>
-<li>Dist : Expert knowledge of XML messaging for modeling various business process flows. RMI, CORBA, SOAP, Web Services. Web</li>
-<li>Web : Expert knowledge of Wicket, Servlets, JSP, Struts, Spring MVC, JSF. HTML, Javascript, AJAX, CSS and DOM. Detailed knowledge of Tomcat and Apache servers. Jetty. PHP. Zend Framework. YAML.</li>
-<li>XML : Extensive use of DOM and SAX parsers,XSL,FOP,JAXB.D</li>
-<li>SCM : SCM Tools Expert knowledge of SCM systems (SVN/Git/ClearCase). Eclipse, Intellij, Netbeans.</li>
-<li>J2EE Servers : Websphere, Weblogic, JBoss, Glassfish, Geronimo</li>
-<li>Databases : Oracle, Db2, MySQL, H2.</li>
-<li>Testing : Junit, TestNG, DBUnit, Selenium</li>
-<li>Build Tools : ANT Expert. Bamboo. Sonar. Clover. Eclemma. PMD</li>
+<li>
+<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/Java">Java</a> : Spring, ORM, J2EE/EJB, JMS, Concurrency. General interest in new open source technologies, test driven design and agile / continuous integration processes. Sun Certified Java Developer</li>
+<li>
+<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/CI Tools">CI Tools</a> : ANT Expert. Bamboo. Sonar. Clover. Eclemma. PMD</li>
+<li>
+<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/Dist">Dist</a> : Expert knowledge of XML messaging for modeling various business process flows. RMI, CORBA, SOAP, Web Services. Web</li>
+<li>
+<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/Web">Web</a> : Expert knowledge of Wicket, Servlets, JSP, Struts, Spring MVC, JSF. HTML, Javascript, AJAX, CSS and DOM. Detailed knowledge of Tomcat and Apache servers. Jetty. PHP. Zend Framework. YAML.</li>
+<li>
+<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/XML">XML</a> : Extensive use of DOM and SAX parsers,XSL,FOP,JAXB.D</li>
+<li>
+<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/SCM">SCM</a> : SCM Tools Expert knowledge of SCM systems (SVN/Git/ClearCase). Eclipse, Intellij, Netbeans.</li>
+<li>
+<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/J2EE Servers">J2EE Servers</a> : Websphere, Weblogic, JBoss, Glassfish, Geronimo</li>
+<li>
+<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/Databases">Databases</a> : Oracle, Db2, MySQL, H2.</li>
+<li>
+<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/Testing">Testing</a> : Junit, TestNG, DBUnit, Selenium</li>
+<li>
+<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/Build Tools">Build Tools</a> : ANT Expert. Bamboo. Sonar. Clover. Eclemma. PMD</li>
 </ul>
 </div>
 </div>
