--- a/src/main/html/resume.html
+++ b/src/main/html/resume.html
@@ -70,7 +70,7 @@
 <span class="org">Arantech</span>, <span class="location">Blackrock, Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2010-01</abbr> - <abbr class="dtend">Present</abbr>
+<abbr class="dtstart" title="2010-01">2010-01</abbr> - <abbr class="dtend">Present</abbr>
 </div>
 <span class="title">Java Software Engineer</span>
 <div class="description">Developer on the core product with responsibility for the implementation of new features and bug fixes. Introduction of unit test code coverage metrics and a framework for featuring testing interfaces of the product.</div>
@@ -81,7 +81,7 @@
 <span class="org">Aegon</span>, <span class="location">IFSC, Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2008-10</abbr> - <abbr class="dtend">2009-10</abbr>
+<abbr class="dtstart" title="2008-10">2008-10</abbr> - <abbr class="dtend">2009-10</abbr>
 </div>
 <span class="title">Contract Software Engineer</span>
 <div class="description">Validation Service Replatforming Conversion of a legacy client side validation component onto a JBoss J2EE platform to allow support for EJB and Webservice requests. Hibernate, Spring with Wicket UI.</div>
@@ -92,7 +92,7 @@
 <span class="org">Terranua/Fidelity</span>, <span class="location">Hatch Street, Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2008-03</abbr> - <abbr class="dtend">2009-09</abbr>
+<abbr class="dtstart" title="2008-03">2008-03</abbr> - <abbr class="dtend">2009-09</abbr>
 </div>
 <span class="title">Contract Software Engineer</span>
 <div class="description">Risk Reporting Responsible for a risk reporting system which queries risk details from the DB, creating a xml report which is then transformed via XSL to html and word formats for user preview and printing.</div>
@@ -103,7 +103,7 @@
 <span class="org">Norkom</span>, <span class="location">Henry St, Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2007-10</abbr> - <abbr class="dtend">2008-02</abbr>
+<abbr class="dtstart" title="2007-10">2007-10</abbr> - <abbr class="dtend">2008-02</abbr>
 </div>
 <span class="title">Contract Software Engineer</span>
 <div class="description">Watch List Management Day to day work involves bug fixing and small pieces of new development on various branches of this sub-project.</div>
@@ -114,7 +114,7 @@
 <span class="org">Curam</span>, <span class="location">Park West, Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2006-09</abbr> - <abbr class="dtend">2007-09</abbr>
+<abbr class="dtstart" title="2006-09">2006-09</abbr> - <abbr class="dtend">2007-09</abbr>
 </div>
 <span class="title">Software Engineer</span>
 <div class="description">Unemployment Insurance Java developer within the workflow group, which involved the full software development lifecycle on various J2EE platforms. Implementation of a unit testing framework and tools to auto-generate unit test stubs from the project model. Maintenance of the smoke test and continuous integration systems. Curam use a model driven development process and have a custom ORM style solution for database transparency</div>
@@ -125,7 +125,7 @@
 <span class="org">UBS</span>, <span class="location">Europastrasse 2, Zurich</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2003-11</abbr> - <abbr class="dtend">2006-05</abbr>
+<abbr class="dtstart" title="2003-11">2003-11</abbr> - <abbr class="dtend">2006-05</abbr>
 </div>
 <span class="title">Software Engineer</span>
 <div class="description">
@@ -140,7 +140,7 @@ Swix is a system for managing open trade positions within the FX branch of the b
 <span class="org">UBS</span>, <span class="location">Liverpool St, London</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2003-01</abbr> - <abbr class="dtend">2003-10</abbr>
+<abbr class="dtstart" title="2003-01">2003-01</abbr> - <abbr class="dtend">2003-10</abbr>
 </div>
 <span class="title">Software Engineer</span>
 <div class="description">
@@ -153,7 +153,7 @@ Swix is a system for managing open trade positions within the FX branch of the b
 <span class="org">Erisson</span>, <span class="location">Clonskeagh, Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="2001-01-01">2000-10</abbr> - <abbr class="dtend">2002-12</abbr>
+<abbr class="dtstart" title="2000-10">2000-10</abbr> - <abbr class="dtend">2002-12</abbr>
 </div>
 <span class="title">Software Engineer</span>
 <div class="description">RANOS is an operations and management system for Ericsson’s 3G telecommunications radio network system. Member of a framework group, which provided generic server side Java/CORBA components</div>
