update html with summary and education details.

--- a/src/main/html/resume.html
+++ b/src/main/html/resume.html
@@ -10,8 +10,9 @@
 <div class="contact vcard">
 <div class="fn n" id="j">
 <span class="given-name">Paul</span>
-<span class="middle-name"/>
 <span class="family-name">O'Connell</span>
+<span class="middle-name">
+, M.Sc, B.A.I, B.A</span>
 </div>
 <div class="adr">
 <span class="street-address">2B Milltown Drive</span>
@@ -22,14 +23,20 @@
 </div>
 <div style="float: left; padding-right: 15px;">
 <span class="tel">
-<span class="value">+353 86 3701806</span> (<span class="type"/>)</span>
-<br/>
+<span class="value">+353 86 3701806</span>
+</span>
 </div>
+<br/>
 <div style="float: left;">
-		Email: <a class="external email fn" href="mailto:paul.t.oconnell@gmail.com">paul.t.oconnell@gmail.com</a>
+Email: <a class="external email fn" href="mailto:paul.t.oconnell@gmail.com">paul.t.oconnell@gmail.com</a>
 <br/>
 </div>
 <div style="clear: both;">&nbsp;</div>
+</div>
+<hr/>
+<div>
+<h2>Objective</h2>
+<p class="summary">To work as a senior java developer within an agile team using test driven design and continuous integration methodology to develop N-tier applications.</p>
 </div>
 <hr/>
 <div>
@@ -169,10 +176,13 @@ Swix is a system for managing open trade positions within the FX branch of the b
 <div class="htitle">
 <span class="summary">M.Sc Network and Distributed Systems</span>
 <br/>
-<span class="org">Trinity College Dublin</span>
+<span class="org">Dissertation Title: Collaborative Ad-hoc Applications. An investigation into the use of trust based security in ad-hoc JINI systems.</span>
+<br/>
+<span class="org">Department of Computer Science,
+						Trinity College Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtend" title=""/>
+<abbr class="dtstart" title="1999-10">1999-10</abbr> --&gt; <abbr class="dtend">2000-10</abbr>
 </div>
 <div style="clear: both">&nbsp;</div>
 </div>
@@ -180,10 +190,13 @@ Swix is a system for managing open trade positions within the FX branch of the b
 <div class="htitle">
 <span class="summary">B.A.I in Computer and Electronic Engineering, B.A in Engineering Mathematics</span>
 <br/>
-<span class="org">Trinity College Dublin</span>
+<span class="org">Final Year Project Title: Digital Filtering System for Internet Telephony.</span>
+<br/>
+<span class="org">Department of Engineering,
+						Trinity College Dublin</span>
 </div>
 <div class="date_duration">
-<abbr class="dtend" title=""/>
+<abbr class="dtstart" title="1995-09">1995-09</abbr> --&gt; <abbr class="dtend">1999-06</abbr>
 </div>
 <div style="clear: both">&nbsp;</div>
 </div>
