Update school url links.

--- a/src/main/html/resume.html
+++ b/src/main/html/resume.html
@@ -176,13 +176,14 @@ Swix is a system for managing open trade positions within the FX branch of the b
 <div class="htitle">
 <span class="summary">M.Sc Network and Distributed Systems</span>
 <br/>
-<span class="org">Dissertation Title: Collaborative Ad-hoc Applications. An investigation into the use of trust based security in ad-hoc JINI systems.</span>
+<span class="summary">Dissertation Title: Collaborative Ad-hoc Applications. An investigation into the use of trust based security in ad-hoc JINI systems.</span>
 <br/>
-<span class="org">Department of Computer Science,
-						Trinity College Dublin</span>
+<span class="org">
+<a class="url fn org" href="http://www.scss.tcd.ie/postgraduate/mscnds/">Department of Computer Science, Trinity College Dublin</a>
+</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="1999-10">1999-10</abbr> --&gt; <abbr class="dtend">2000-10</abbr>
+<abbr class="dtstart" title="1999-10">1999-10</abbr> : <abbr class="dtend" title="2000-10">2000-10</abbr>
 </div>
 <div style="clear: both">&nbsp;</div>
 </div>
@@ -190,13 +191,14 @@ Swix is a system for managing open trade positions within the FX branch of the b
 <div class="htitle">
 <span class="summary">B.A.I in Computer and Electronic Engineering, B.A in Engineering Mathematics</span>
 <br/>
-<span class="org">Final Year Project Title: Digital Filtering System for Internet Telephony.</span>
+<span class="summary">Final Year Project Title: Digital Filtering System for Internet Telephony.</span>
 <br/>
-<span class="org">Department of Engineering,
-						Trinity College Dublin</span>
+<span class="org">
+<a class="url fn org" href="http://www.tcd.ie/Engineering/">Department of Engineering, Trinity College Dublin</a>
+</span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="1995-09">1995-09</abbr> --&gt; <abbr class="dtend">1999-06</abbr>
+<abbr class="dtstart" title="1995-09">1995-09</abbr> : <abbr class="dtend" title="1999-06">1999-06</abbr>
 </div>
 <div style="clear: both">&nbsp;</div>
 </div>
