--- a/src/main/html/resume.html
+++ b/src/main/html/resume.html
@@ -1,34 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns:h="http://ns.hr-xml.org/2007-04-15">
 <head>
-<link href="./css/bootstrap.css" rel="stylesheet"/>
+<link rel="stylesheet" href="./css/bootstrap.css"/>
 <style type="text/css">
-body {
-  padding-top: 60px;
-  padding-bottom: 40px;
-}
-</style>
-<link href="./css/bootstrap-responsive.css" rel="stylesheet"/>
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+    </style>
+<link rel="stylesheet" href="./css/bootstrap-responsive.css"/>
 <title>Paul  O'Connell's Curriculum Vitae
 </title>
 </head>
 <body>
 <div class="hresume container">
-<h1 class="brand" id="cv">Curriculum Vitae</h1>
-<div class="contact vcard">
-<div class="fn n" id="j">
+<div class="row hero-unit">
+<div class="span12">
+<h1 id="cv" class="brand">Curriculum Vitae</h1>
+<div class="row show-grid contact vcard">
+<div class="span3 offset2">
+<div id="j" class="fn n">
 <span class="given-name">Paul</span>
 <span class="family-name">O'Connell</span>
 <span class="middle-name">
-, M.Sc, B.A.I, B.A</span>
+              , M.Sc, B.A.I, B.A</span>
 </div>
 <div class="adr">
 <span class="street-address">2B Milltown Drive</span>
 <br/>
-<span class="locality">Churchtown</span>, <span class="region">Dublin 14</span>
+<span class="locality">Churchtown</span>
+<br/>
+<span class="region">Dublin 14</span>
+<br/>
 <span class="postal-code"/>
 <span class="country-name">Ireland</span>
 </div>
+</div>
+<div class="span3 offset1">
 <div style="float: left; padding-right: 15px;">
 <span class="tel">
 <span class="value">+353 86 3701806</span>
@@ -36,13 +44,14 @@ body {
 </div>
 <br/>
 <div style="float: left;">
-Email: <a class="external email fn" href="mailto:paul.t.oconnell@gmail.com">paul.t.oconnell@gmail.com</a>
-<br/>
+              Email: <a href="mailto:paul.t.oconnell@gmail.com" class="external email fn">paul.t.oconnell@gmail.com</a>
 </div>
-<div style="clear: both;">&nbsp;</div>
+</div>
+</div>
+</div>
 </div>
 <hr/>
-<div class="hero-unit">
+<div>
 <h2>Objective</h2>
 <p class="summary">To work as a senior java developer within an agile team using test driven design and continuous integration methodology to develop N-tier applications.</p>
 </div>
@@ -51,28 +60,48 @@ Email: <a class="external email fn" href="mailto:paul.t.oconnell@gmail.com">paul
 <h2>Skills</h2>
 <div>
 <div class="tags">
-<ul>
-<li>
-<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/Java">Java</a> : Spring, ORM, J2EE/EJB, JMS, Concurrency. General interest in new open source technologies, test driven design and agile / continuous integration processes. Sun Certified Java Developer</li>
-<li>
-<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/CI Tools">CI Tools</a> : ANT Expert. Bamboo. Sonar. Clover. Eclemma. PMD</li>
-<li>
-<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/Dist">Dist</a> : Expert knowledge of XML messaging for modeling various business process flows. RMI, CORBA, SOAP, Web Services. Web</li>
-<li>
-<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/Web">Web</a> : Expert knowledge of Wicket, Servlets, JSP, Struts, Spring MVC, JSF. HTML, Javascript, AJAX, CSS and DOM. Detailed knowledge of Tomcat and Apache servers. Jetty. PHP. Zend Framework. YAML.</li>
-<li>
-<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/XML">XML</a> : Extensive use of DOM and SAX parsers,XSL,FOP,JAXB.D</li>
-<li>
-<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/SCM">SCM</a> : SCM Tools Expert knowledge of SCM systems (SVN/Git/ClearCase). Eclipse, Intellij, Netbeans.</li>
-<li>
-<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/J2EE Servers">J2EE Servers</a> : Websphere, Weblogic, JBoss, Glassfish, Geronimo</li>
-<li>
-<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/Databases">Databases</a> : Oracle, Db2, MySQL, H2.</li>
-<li>
-<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/Testing">Testing</a> : Junit, TestNG, DBUnit, Selenium</li>
-<li>
-<a class="skill" target="_blank" rel="tag" href="http://stackoverflow.com/questions/tagged/Build Tools">Build Tools</a> : ANT Expert. Bamboo. Sonar. Clover. Eclemma. PMD</li>
-</ul>
+<dl class="dl-horizontal">
+<dt>
+<a href="http://stackoverflow.com/questions/tagged/Java" rel="tag" target="_blank" class="skill">Java</a>
+</dt>
+<dd>Spring, ORM, J2EE/EJB, JMS, Concurrency. General interest in new open source technologies, test driven design and agile / continuous integration processes. Sun Certified Java Developer</dd>
+<dt>
+<a href="http://stackoverflow.com/questions/tagged/CI Tools" rel="tag" target="_blank" class="skill">CI Tools</a>
+</dt>
+<dd>ANT Expert. Bamboo. Sonar. Clover. Eclemma. PMD</dd>
+<dt>
+<a href="http://stackoverflow.com/questions/tagged/Dist" rel="tag" target="_blank" class="skill">Dist</a>
+</dt>
+<dd>Expert knowledge of XML messaging for modeling various business process flows. RMI, CORBA, SOAP, Web Services. Web</dd>
+<dt>
+<a href="http://stackoverflow.com/questions/tagged/Web" rel="tag" target="_blank" class="skill">Web</a>
+</dt>
+<dd>Expert knowledge of Wicket, Servlets, JSP, Struts, Spring MVC, JSF. HTML, Javascript, AJAX, CSS and DOM. Detailed knowledge of Tomcat and Apache servers. Jetty. PHP. Zend Framework. YAML.</dd>
+<dt>
+<a href="http://stackoverflow.com/questions/tagged/XML" rel="tag" target="_blank" class="skill">XML</a>
+</dt>
+<dd>Extensive use of DOM and SAX parsers,XSL,FOP,JAXB.D</dd>
+<dt>
+<a href="http://stackoverflow.com/questions/tagged/SCM" rel="tag" target="_blank" class="skill">SCM</a>
+</dt>
+<dd>SCM Tools Expert knowledge of SCM systems (SVN/Git/ClearCase). Eclipse, Intellij, Netbeans.</dd>
+<dt>
+<a href="http://stackoverflow.com/questions/tagged/J2EE Servers" rel="tag" target="_blank" class="skill">J2EE Servers</a>
+</dt>
+<dd>Websphere, Weblogic, JBoss, Glassfish, Geronimo</dd>
+<dt>
+<a href="http://stackoverflow.com/questions/tagged/Databases" rel="tag" target="_blank" class="skill">Databases</a>
+</dt>
+<dd>Oracle, Db2, MySQL, H2.</dd>
+<dt>
+<a href="http://stackoverflow.com/questions/tagged/Testing" rel="tag" target="_blank" class="skill">Testing</a>
+</dt>
+<dd>Junit, TestNG, DBUnit, Selenium</dd>
+<dt>
+<a href="http://stackoverflow.com/questions/tagged/Build Tools" rel="tag" target="_blank" class="skill">Build Tools</a>
+</dt>
+<dd>ANT Expert. Bamboo. Sonar. Clover. Eclemma. PMD</dd>
+</dl>
 </div>
 </div>
 </div>
@@ -82,114 +111,140 @@ Email: <a class="external email fn" href="mailto:paul.t.oconnell@gmail.com">paul
 <div class="vcalendar">
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="org">
-<h2>Arantech</h2>
-</span>, <span class="location">Blackrock, Dublin</span>
+<h3 class="org">Arantech<small>
+<div class="date date_duration">
+<abbr title="2010-01" class="dtstart">2010-01</abbr> - <abbr title="2012-06" class="dtend">2012-06</abbr>
 </div>
-<div class="date_duration">
-<abbr class="dtstart" title="2010-01">2010-01</abbr> - <abbr class="dtend" title="Present">Present</abbr>
+</small>
+</h3>
+<ul class="unstyled">
+<li>Java contractor working on various Customer Experience Management components for use by the mobile operators.</li>
+<ul>
+<li>Introduction of a generic entity framework into the core Touchpoint product.</li>
+<li>Create a test framework for integration and system testing of the product.</li>
+<li>Introduced the use of the sonar code quality engine to the organisation.</li>
+</ul>
+</ul>
 </div>
-<h3 class="title">Java Software Engineer</h3>
-<div class="description">Developer on the core product with responsibility for the implementation of new features and bug fixes. Introduction of unit test code coverage metrics and a framework for featuring testing interfaces of the product.</div>
 </div>
-<div style="clear: both">&nbsp;</div>
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="org">
-<h2>Aegon</h2>
-</span>, <span class="location">IFSC, Dublin</span>
+<h3 class="org">Aegon<small>
+<div class="date date_duration">
+<abbr title="2008-10" class="dtstart">2008-10</abbr> - <abbr title="2009-10" class="dtend">2009-10</abbr>
 </div>
-<div class="date_duration">
-<abbr class="dtstart" title="2008-10">2008-10</abbr> - <abbr class="dtend" title="2009-10">2009-10</abbr>
+</small>
+</h3>
+<ul class="unstyled">
+<li>Java contractor within the Aegon office providing service for the UK and Dutch Aegon companies.</li>
+<ul>
+<li>Validation Service Replatforming Conversion of a legacy client side validation component onto a JBoss J2EE platform to allow support for EJB and Webservice requests. Hibernate, Spring with Wicket UI.</li>
+</ul>
+</ul>
 </div>
-<h3 class="title">Contract Software Engineer</h3>
-<div class="description">Validation Service Replatforming Conversion of a legacy client side validation component onto a JBoss J2EE platform to allow support for EJB and Webservice requests. Hibernate, Spring with Wicket UI.</div>
 </div>
-<div style="clear: both">&nbsp;</div>
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="org">
-<h2>Terranua/Fidelity</h2>
-</span>, <span class="location">Hatch Street, Dublin</span>
+<h3 class="org">Terranua/Fidelity<small>
+<div class="date date_duration">
+<abbr title="2008-03" class="dtstart">2008-03</abbr> - <abbr title="2009-09" class="dtend">2009-09</abbr>
 </div>
-<div class="date_duration">
-<abbr class="dtstart" title="2008-03">2008-03</abbr> - <abbr class="dtend" title="2009-09">2009-09</abbr>
+</small>
+</h3>
+<ul class="unstyled">
+<li>Terranua, Dublin, Ireland Java contractor within terranua’s consultancy group focused on providing a risk control system to the Fidelity organization. Full front to back development work, using Spring (MVC) and Hibernate technologies to deploy within Tomcat/Websphere with an Oracle DB.</li>
+<ul>
+<li>Risk Reporting Responsible for a risk reporting system which queries risk details from the DB, creating a xml report which is then transformed via XSL to html and word formats for user preview and printing.</li>
+</ul>
+</ul>
 </div>
-<h3 class="title">Contract Software Engineer</h3>
-<div class="description">Risk Reporting Responsible for a risk reporting system which queries risk details from the DB, creating a xml report which is then transformed via XSL to html and word formats for user preview and printing.</div>
 </div>
-<div style="clear: both">&nbsp;</div>
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="org">
-<h2>Norkom</h2>
-</span>, <span class="location">Henry St, Dublin</span>
+<h3 class="org">Norkom<small>
+<div class="date date_duration">
+<abbr title="2007-10" class="dtstart">2007-10</abbr> - <abbr title="2008-02" class="dtend">2008-02</abbr>
 </div>
-<div class="date_duration">
-<abbr class="dtstart" title="2007-10">2007-10</abbr> - <abbr class="dtend" title="2008-02">2008-02</abbr>
+</small>
+</h3>
+<ul class="unstyled">
+<li>Java contractor within Norkom’s development group, using the Spring, Struts and Hibernate technologies to create a financial crime and compliance application that can be deployed into various J2EE server and database environments.</li>
+<ul>
+<li>Watch List Management Day to day work involves bug fixing and small pieces of new development on various branches of this sub-project.</li>
+</ul>
+</ul>
 </div>
-<h3 class="title">Contract Software Engineer</h3>
-<div class="description">Watch List Management Day to day work involves bug fixing and small pieces of new development on various branches of this sub-project.</div>
 </div>
-<div style="clear: both">&nbsp;</div>
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="org">
-<h2>Curam</h2>
-</span>, <span class="location">Park West, Dublin</span>
+<h3 class="org">Curam<small>
+<div class="date date_duration">
+<abbr title="2006-09" class="dtstart">2006-09</abbr> - <abbr title="2007-09" class="dtend">2007-09</abbr>
 </div>
-<div class="date_duration">
-<abbr class="dtstart" title="2006-09">2006-09</abbr> - <abbr class="dtend" title="2007-09">2007-09</abbr>
+</small>
+</h3>
+<ul class="unstyled">
+<li>Curam provide a social enterprise management solution that can be customised for various social welfare organisations across the globe.</li>
+<ul>
+<li>Unemployment Insurance Java developer within the workflow group which involved the full software development lifecycle on various J2EE platforms.</li>
+<li>Implementation of a unit testing framework and tools to auto-generate unit test stubs from the project model.</li>
+<li>Maintenance of the smoke test and continuous integration systems.</li>
+</ul>
+</ul>
 </div>
-<h3 class="title">Software Engineer</h3>
-<div class="description">Unemployment Insurance Java developer within the workflow group, which involved the full software development lifecycle on various J2EE platforms. Implementation of a unit testing framework and tools to auto-generate unit test stubs from the project model. Maintenance of the smoke test and continuous integration systems. Curam use a model driven development process and have a custom ORM style solution for database transparency</div>
 </div>
-<div style="clear: both">&nbsp;</div>
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="org">
-<h2>UBS</h2>
-</span>, <span class="location">Europastrasse 2, Zurich</span>
+<h3 class="org">UBS<small>
+<div class="date date_duration">
+<abbr title="2003-11" class="dtstart">2003-11</abbr> - <abbr title="2006-05" class="dtend">2006-05</abbr>
 </div>
-<div class="date_duration">
-<abbr class="dtstart" title="2003-11">2003-11</abbr> - <abbr class="dtend" title="2006-05">2006-05</abbr>
-</div>
-<h3 class="title">Software Engineer</h3>
-<div class="description">
+</small>
+</h3>
+<ul class="unstyled">
+<li>Internation assignment as a Software developer within Foreign Exchange IT group in Zurich, Switzerland.</li>
+<ul>
+<li>
 					ZFM is a real time settlement and reconciliation system based on XML messaging over MQ. As project leader my responsibilities have included the design and implementation of an API, the planning and co-ordination of development and testing, both within our group and with other departments. The system consists of various java applications communicating via XML and MQ. A web-based tool supports tracking and supervision of messages within the system.
 eBus provides a consolidated view of all deal confirmation messages within the FX trading platform. As project lead I was responsible for the design of a common message specification, implementation with XML/XSL over MQ, and the co-ordination of the testing and release phases.
 Swix is a system for managing open trade positions within the FX branch of the bank. Lead Java developer my responsibilities included the initial XML protocol specification, implementation of a web application (Tomcat) and co-ordination of testing with other groups and business users.
+</li>
+</ul>
+</ul>
 </div>
 </div>
-<div style="clear: both">&nbsp;</div>
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="org">
-<h2>UBS</h2>
-</span>, <span class="location">Liverpool St, London</span>
+<h3 class="org">UBS<small>
+<div class="date date_duration">
+<abbr title="2003-01" class="dtstart">2003-01</abbr> - <abbr title="2003-10" class="dtend">2003-10</abbr>
 </div>
-<div class="date_duration">
-<abbr class="dtstart" title="2003-01">2003-01</abbr> - <abbr class="dtend" title="2003-10">2003-10</abbr>
+</small>
+</h3>
+<ul class="unstyled">
+<li>Software developer within Foreign Exchange IT group based in London.</li>
+<ul>
+<li>Lead Java developer on the Swix tool to handle open positions on a daily basis. My responsibilities included the initial XML protocol specification, implementation of a web application (Tomcat) and co-ordination of testing with other groups and business users.</li>
+</ul>
+</ul>
 </div>
-<h3 class="title">Software Engineer</h3>
-<div class="description">
-Swix is a system for managing open trade positions within the FX branch of the bank. Lead Java developer my responsibilities included the initial XML protocol specification, implementation of a web application (Tomcat) and co-ordination of testing with other groups and business users.
 </div>
-</div>
-<div style="clear: both">&nbsp;</div>
 <div class="experience vevent vcard">
 <div class="htitle">
-<span class="org">
-<h2>Erisson</h2>
-</span>, <span class="location">Clonskeagh, Dublin</span>
+<h3 class="org">Erisson<small>
+<div class="date date_duration">
+<abbr title="2000-10" class="dtstart">2000-10</abbr> - <abbr title="2002-12" class="dtend">2002-12</abbr>
 </div>
-<div class="date_duration">
-<abbr class="dtstart" title="2000-10">2000-10</abbr> - <abbr class="dtend" title="2002-12">2002-12</abbr>
+</small>
+</h3>
+<ul class="unstyled">
+<li>RANOS is an operations and management system for Ericsson’s 3G telecommunications radio network system.</li>
+<ul>
+<li>Member of a framework group which provided generic server side Java/CORBA components.</li>
+</ul>
+</ul>
 </div>
-<h3 class="title">Software Engineer</h3>
-<div class="description">RANOS is an operations and management system for Ericsson’s 3G telecommunications radio network system. Member of a framework group, which provided generic server side Java/CORBA components</div>
 </div>
-<div style="clear: both">&nbsp;</div>
 </div>
 </div>
 <hr/>
@@ -203,11 +258,11 @@ Swix is a system for managing open trade positions within the FX branch of the b
 <span class="summary">Dissertation Title: Collaborative Ad-hoc Applications. An investigation into the use of trust based security in ad-hoc JINI systems.</span>
 <br/>
 <span class="org">
-<a class="url fn org" href="http://www.scss.tcd.ie/postgraduate/mscnds/" title="Department of Computer Science, Trinity College Dublin">Department of Computer Science, Trinity College Dublin</a>
+<a title="Department of Computer Science, Trinity College Dublin" href="http://www.scss.tcd.ie/postgraduate/mscnds/" class="url fn org">Department of Computer Science, Trinity College Dublin</a>
 </span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="1999-10">1999-10</abbr> : <abbr class="dtend" title="2000-10">2000-10</abbr>
+<abbr title="1999-10" class="dtstart">1999-10</abbr> : <abbr title="2000-10" class="dtend">2000-10</abbr>
 </div>
 <div style="clear: both">&nbsp;</div>
 </div>
@@ -218,11 +273,11 @@ Swix is a system for managing open trade positions within the FX branch of the b
 <span class="summary">Final Year Project Title: Digital Filtering System for Internet Telephony.</span>
 <br/>
 <span class="org">
-<a class="url fn org" href="http://www.tcd.ie/Engineering/" title="Department of Engineering, Trinity College Dublin">Department of Engineering, Trinity College Dublin</a>
+<a title="Department of Engineering, Trinity College Dublin" href="http://www.tcd.ie/Engineering/" class="url fn org">Department of Engineering, Trinity College Dublin</a>
 </span>
 </div>
 <div class="date_duration">
-<abbr class="dtstart" title="1995-09">1995-09</abbr> : <abbr class="dtend" title="1999-06">1999-06</abbr>
+<abbr title="1995-09" class="dtstart">1995-09</abbr> : <abbr title="1999-06" class="dtend">1999-06</abbr>
 </div>
 <div style="clear: both">&nbsp;</div>
 </div>
